kyverno/evidence/istio-label/compliant-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: at12345-dev
  labels:
    istio.io/rev: asm-1-22
